--- a/client/src/components/LandingPage.module.css
+++ b/client/src/components/LandingPage.module.css
@@ -16,8 +16,10 @@
     display:block;
     position: relative;
     text-align: center;
+    font-size: 1.4em;
     top: 35vh;
     padding: 0.6em;
+    letter-spacing: 0.23em;
 }
 
 .h1{
@@ -31,11 +33,11 @@
     color: #cccccc;
     font-weight: bold;
     text-transform: capitalize;
-    padding: 0.20rem 0.70rem;
+    padding: 0.25rem 1.20rem;
     margin: 0 0.25rem 0.5rem;
     border: solid 2px transparent;
     border-radius: 30px;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     transition: background-color 0.25s;
   }
 
