--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     width: 80%;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center
 }
 
