--- a/client/src/components/NewRecipe.module.css
+++ b/client/src/components/NewRecipe.module.css
@@ -1,18 +1,9 @@
-.text{
-    text-decoration: none;
-}
-
-.title{
-    background-color: #727171a6;
-    margin: 1rem 0 2rem;
-}
-
 .button {
     background-color: var(--button-color);
     color: #cccccc;
     font-weight: bold;
     padding: 0.25rem 1.20rem;
-    margin:  0.25rem 0.5rem;
+    margin: 0 0.25rem 0.5rem;
     border: solid 2px transparent;
     border-radius: 10px;
     font-size: 1rem;
@@ -24,11 +15,6 @@
     color: #cccccc;
 }
 
-.scoresContainer{
-    display: inline-block;
-}
-
-.container {
-    display:grid;
-    grid-template-columns: 50% 50%;
+ul {
+    list-style-type: none;
 }
