--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -5,9 +5,9 @@ body{
     background-size: 64px 128px;  
 }
 
-.container{
+.containerCards{
     display: flex;
-    width: 80%;
+    width: 100vw;
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: center
@@ -29,3 +29,53 @@ body{
     background-color: var(--button-hover);
     color: #cccccc;
 }
+
+select {
+
+    background-color: white;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1em;
+    padding: 0.5em 3.5em 0.5em 1em;
+  
+    margin: 0;      
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+
+select.round {
+    background-image:
+      linear-gradient(45deg, transparent 50%, gray 50%),
+      linear-gradient(135deg, gray 50%, transparent 50%),
+      radial-gradient(#ddd 70%, transparent 72%);
+    background-position:
+      calc(100% - 20px) calc(1em),
+      calc(100% - 15px) calc(1em),
+      calc(100% - .5em) .3em;
+    background-size:
+      5px 5px,
+      5px 5px,
+      1.5em 1.5em;
+    background-repeat: no-repeat;
+  }
+  
+select.round:focus {
+    background-image:
+      linear-gradient(45deg, white 50%, transparent 50%),
+      linear-gradient(135deg, transparent 50%, white 50%),
+      radial-gradient(gray 70%, transparent 72%);
+    background-position:
+      calc(100% - 15px) 1em,
+      calc(100% - 20px) 1em,
+      calc(100% - .5em) .3em;
+    background-size:
+      5px 5px,
+      5px 5px,
+      1.5em 1.5em;
+    background-repeat: no-repeat;
+    outline: 0;
+  }
