--- a/client/src/components/NavBar.module.css
+++ b/client/src/components/NavBar.module.css
@@ -14,3 +14,12 @@
     background-color: var(--button-hover);
     color: #cccccc;
 }
+
+.inputBar{
+    background-color: white;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 0.3em;
+    padding: 0.3em 2.5em 0.3em 1em;
+}
